--- a/static/html/db/ssh.html
+++ b/static/html/db/ssh.html
@@ -35,6 +35,7 @@
             <br>
         </div>
         <button type="button" :style="{'background-color':funcAttr.connOpen? 'chocolate' : 'gray' }" 
+            style="user-select: all;"
             @click="toggleConn()">{{formdata.host}}/{{formdata.db}}</button>
         <button type="button" class="btn1" onclick="execute('selected')">执行选中<tip v-show="funcAttr.funcKeyPress">r</tip></button>
         <button type="button" class="btn1" onclick="stopExecute()">停止</button>
