--- a/static/html/fs/main.html
+++ b/static/html/fs/main.html
@@ -46,7 +46,7 @@
 </body>
 
 <script src="../../js/config.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/liuyaocool/jslib/vue/vue3.global.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.5.4/vue.global.min.js"></script>
 <script src="../../js/base.js"></script>
 <script src="main.js?v=1.1"></script>
 
