--- a/static/index.html
+++ b/static/index.html
@@ -8,8 +8,8 @@
 <body>
 
 <ul>
-    <li><a href="fs/main.html">文件系统</a></li>
-    <li><a href="db/menu.html">数据库工具</a></li>
+    <li><a href="html/fs/main.html">文件系统</a></li>
+    <li><a href="html/db/menu.html">数据库工具</a></li>
 </ul>
 
 </body>
