fs download encode path

--- a/static/html/fs/main.html
+++ b/static/html/fs/main.html
@@ -47,10 +47,11 @@
 
 <script src="../../js/config.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.5.4/vue.global.min.js"></script>
+<script src="https://resource.liuyao.link/js/my/util.js"></script>
 <script src="../../js/base.js"></script>
 <script src="main.js?v=1.1"></script>
 
-<script src="https://cdn.jsdelivr.net/gh/liuyaocool/jslib/effectjs/mouseGerm.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/liuyaocool/jslib/effectjs/bgRgbDown.js"></script>
+<script src="https://resource.liuyao.link/js/effect/mouseGerm.js"></script>
+<script src="https://resource.liuyao.link/js/effect/bgRgbDown.js"></script>
 
 </html>
