--- a/static/html/fs/main.html
+++ b/static/html/fs/main.html
@@ -51,7 +51,7 @@
 <script src="../../js/base.js"></script>
 <script src="main.js?v=1.1"></script>
 
-<script src="https://resource.liuyao.link/js/effect/mouseGerm.js"></script>
-<script src="https://resource.liuyao.link/js/effect/bgRgbDown.js"></script>
+<!--<script src="https://resource.liuyao.link/js/effect/mouseGerm.js"></script>-->
+<!--<script src="https://resource.liuyao.link/js/effect/bgRgbDown.js"></script>-->
 
 </html>
