--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>menu</title>
+
+	<style>
+		ul {
+			font-size: 7vw;
+			padding-left: 10vw;
+		}
+
+	</style>
 </head>
 
 <body>
