--- a/static/html/fs/openfile.html
+++ b/static/html/fs/openfile.html
@@ -8,6 +8,7 @@
 <body>
 </body>
 <script src="../../js/config.js"></script>
+<script src="base.js"></script>
 <script src="../../js/base.js"></script>
 <script src="openfile.js"></script>
 </html>
