remove js/base.js

--- a/static/html/db/ssh.html
+++ b/static/html/db/ssh.html
@@ -138,7 +138,7 @@
 
 <script src="../../js/config.js"></script>
 <script>let path = Global.apiPath;</script>
-<script src="../../js/base.js"></script>
+<script src="https://resource.liuyao.link/js/my/util.js"></script>
 <!--vue中文文档: https://v2.cn.vuejs.org/v2/guide/installation.html-->
 <script src="../../js/vue3.global.js"></script>
 <script src="../../js/file/common.js"></script>
