--- a/static/html/fs/main.html
+++ b/static/html/fs/main.html
@@ -59,10 +59,9 @@
 </body>
 
 <script src="../../js/config.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.5.4/vue.global.min.js"></script>
+<script src="../../js/vue3.global.js"></script>
 <script src="https://resource.liuyao.link/js/my/util.js"></script>
-<script src="base.js"></script>
-<script src="../../js/base.js"></script>
+<script src="base.js?v=1"></script>
 <script src="main.js?v=1.1"></script>
 
 <!--<script src="https://resource.liuyao.link/js/effect/mouseGerm.js"></script>-->
