--- a/static/html/fs/main.html
+++ b/static/html/fs/main.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- 初始缩放 -->
+    <meta name="viewport" content="initial-scale=0.4">
     <title>FILE SYSTEM</title>
+    <link rel="stylesheet" href="../../css/theme.css"/>
 </head>
 <body>
 <div id="app">
@@ -48,9 +51,8 @@
 
 </body>
 
-<link rel="stylesheet" href="../../css/theme.css"/>
-<script src="https://resource.liuyao.link/js/my/util.js"></script>
-<script>includeCss('main.css?v=1.5', 'main-phone.css?v=1.5')</script>
+<script src="https://resource.liuyao.link/js/my/util.js?v=001"></script>
+<script>includeCss('main.css?v=1.7', 'main-phone.css?v=1.8')</script>
 <script src="../../js/config.js"></script>
 <script src="../../js/vue3.global.js"></script>
 <script src="base.js?v=1"></script>
