--- a/static/html/fs/main.html
+++ b/static/html/fs/main.html
@@ -51,7 +51,7 @@
 
 </body>
 
-<script src="https://resource.liuyao.link/js/my/util.js?v=001"></script>
+<script src="../../js/util.js"></script>
 <script>includeCss('main.css?v=1.7', 'main-phone.css?v=1.8')</script>
 <script src="../../js/config.js"></script>
 <script src="../../js/vue3.global.js"></script>
