--- a/static/html/db/menu.html
+++ b/static/html/db/menu.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <title>数据库工具</title>
+    <link rel="stylesheet" href="../../css/theme.css"/>
 
 </head>
 
