--- a/static/html/fs/text.html
+++ b/static/html/fs/text.html
@@ -4,32 +4,35 @@
     <meta charset="UTF-8">
     <title>OPEN FILE</title>
     <style>
-        table {
-            width: 100%;
-            border-collapse: collapse; /* 边框合并以显示为单个边框 */
+        body, html {
+            background-color: #181a1b;
+            color: white;
+            font-size: 16px;
+            margin-left: 8px;
         }
-        .text_no {
-            padding: 0 10px;
-            vertical-align: middle;
-            text-align: right;
+        li::marker {
             color: gray;
         }
-        .text_auto_wrap {
-            white-space: normal; /* 允许文本自动换行 */
+        li {
+            white-space: pre-wrap; /* 允许文本自动换行 */
             word-wrap: break-word; /* 在单词边界自动换行 */
             word-break: break-all;
         }
     </style>
 </head>
 <body>
-</body>
+<pre><ol id="text"></ol></pre>
 <script src="../../js/config.js"></script>
+<script src="../../js/util.js"></script>
 <script>
+    if (isMobile()) {
+        document.body.style.fontSize = '3vw';
+        document.body.style.marginLeft = '3vw';
+    }
     const filePath = location.hash.substring(1);
     let readPos = 0, reading = false, readPre = '', readLineNo = 1;
     document.title = decodeURIComponent(filePath.substr(filePath.lastIndexOf('/') + 1));
 
-    document.body.innerHTML = `<table><tbody id="text"></tbody></table>`;
     nextText(-1);
     window.addEventListener("scroll", e => {if (canGetText()) nextText(2);});
 
@@ -42,7 +45,7 @@
     function nextText(autoNextLen) {
         if (readPos == -1) return;
         reading = true;
-        fetch(`${Global.apiPath}/fs/textGet?position=${readPos}&size=2048&path=${encodeURIComponent(filePath)}`)
+        fetch(`${Global.apiPath}/fs/textGet?position=${readPos}&size=4096&path=${encodeURIComponent(filePath)}`)
         .then(res => res.text())
         .then(res => {
                 res = JSON.parse(res);
@@ -55,12 +58,7 @@
                     readPos = res.position;
                 }
                 lines.forEach(line => {
-                    let dom = document.createElement('tr');
-                    // dom.innerHTML = ;
-                    ele += `<tr>
-                        <td class="text_no">${res.code != 200 ? `-${res.code}` : readLineNo++}</td>
-                        <td class="text_auto_wrap">${line}</td>
-                        </tr>`;
+                    ele += `<li>${line}</li>`;
                 });
                 document.getElementById('text').innerHTML += ele;
                 reading = false;
@@ -74,4 +72,5 @@
         return readPos !== -1 && window.scrollY + window.innerHeight >= document.documentElement.scrollHeight;
     }
 </script>
+</body>
 </html>
