--- a/static/html/fs/video.html
+++ b/static/html/fs/video.html
@@ -63,9 +63,8 @@
 
 </div></body>
 
-<script src="../../js/config.js"></script>
-<script src="../../js/util.js"></script>
-<script src="../../js/vue3.global.js"></script>
+<script src="config.js"></script>
+<script src="vue3.global.js"></script>
 
 <script>
     /**
