--- a/static/html/fs/img.html
+++ b/static/html/fs/img.html
@@ -18,7 +18,7 @@
 <body>
 </body>
 <img id="imgDoc">
-<script src="../../js/config.js"></script>
+<script src="config.js"></script>
 <script>
     const filePath = location.hash.substring(1);
     document.title = filePath.substr(filePath.lastIndexOf('/') + 1);
