--- a/static/fs/main.html
+++ b/static/fs/main.html
@@ -6,6 +6,7 @@
     <!-- 初始缩放 -->
     <meta name="viewport" content="initial-scale=0.4">
     <title>FILE SYSTEM</title>
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="theme.css"/>
 </head>
 <body>
